@@ -12,13 +12,14 @@ import presentation.screens.dayPartMenu.morningButtons.MorningButtons
 import presentation.screens.dayPartMenu.morningButtons.toBundle
 
 @Composable
-fun ChecklistButton(button: MorningButtons) = Box(modifier = Modifier.wrapContentHeight()){
-    val subtasks = SubTaskList(button.toBundle().chiaro, itemNames = listOf("just", "random", "stuff"))
-    Column(
-        horizontalAlignment = Alignment.CenterHorizontally,
-        verticalArrangement = Arrangement.spacedBy(4.dp),
-    ){
-        MainTaskButton(button.toBundle())
-        subtasks.forEach { task -> task.invoke() }
+fun ChecklistButton(button: MorningButtons) =
+    Box(modifier = Modifier.wrapContentHeight()) {
+        val subtasks = SubTaskList(button.toBundle().chiaro)
+        Column(
+            horizontalAlignment = Alignment.CenterHorizontally,
+            verticalArrangement = Arrangement.spacedBy(4.dp),
+        ) {
+            MainTaskButton(button.toBundle())
+            subtasks.forEach { task -> task.invoke() }
+        }
     }
-}
