@@ -8,6 +8,7 @@ Learned:
 Did:
     - Rename ChecklistButton, MainTaskButton and SubTaskButton to make their function & relations clearer.
     - Make MainTaskButton use Strings instead of StringResources (necessary if we want user input customisation).
+    - Rename ChiaroscuroDrawable to just Chiaroscuro, add getPainter method as well as getDrawable. Apply Linting.
 
 6-12-2024
 Streak: 2
